# Juego-POO

./: CMakeLists.txt  Hormiga.cpp  Hormiga.h  Plataforma.cpp  Plataforma.h  PuertaEscenario.cpp  PuertaEscenario.h  Ray.cpp  Ray.h  main.cpp
RayGame_clean/: CMakeLists.txt  Hormiga.cpp  Hormiga.h  Ray.cpp  Villano.cpp  Villano.h  main.cpp
